Modified title (hardcode)

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/82876936" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
-    <title>React App</title>
+    <title>Bitcoin dynamics</title>
   </head>
   <body style="background-color: lightgrey">
     <noscript>You need to enable JavaScript to run this app.</noscript>
